src/sass/modules/hero.scss
.hero {
  color: white;
  min-height: 100vh;
  padding-top: 80px;
  z-index: 1;

  &.not-homepage {
    display: flex;
    flex-direction: column;
    justify-content: space-between;

    @media (min-width: 768px) {
      .copy {
        align-self: center;
      }
    }
  }

  .copy {
    padding: 24px;

    h1 {
      font-size: 44px;
      font-weight: 600;
      line-height: 1.3;
    }

    p {
      font-size: 20px;
      font-weight: 600;
      + p {
        margin-top: 36px;
        font-weight: 200;
      }
    }
  }
}

@media (min-width: 1024px) {
  .homepage-hero {
    display: flex;
    align-items: center;
    padding-top: 0;
  }

  .homepage-hero .copy {
    h1 {
      font-size: 36px;
    }
    p {
      font-size: 24px;
    }
  }
}

@media (min-width: 1440px) {
  .homepage-hero .copy {
    h1 {
      font-size: 48px;
    }
    p {
      font-size: 28px;
    }
  }
}

@media (min-width: 1600px) {
  .homepage-hero {
    max-width: 80vw;
    margin: 0 auto;
    .homepage-hero .copy {
      h1 {
        font-size: 60px;
      }
      p {
        font-size: 32px;
      }
    }
  }
}

@media (min-width: 1024px) {
  .hero.not-homepage {
    flex-direction: row;
  }

  .products-hero {
    .copy {
      width: 80%;
    }
    .hero-visual {
      width: 100%;
    }
  }
}

